Factor out superclass Scanner from JSONTokener. Rearrange JSONTokener and introduce JSONStrictTokener.